--- a/weather-app/src/components/Header.module.css
+++ b/weather-app/src/components/Header.module.css
@@ -1,6 +1,6 @@
 /* Header.module.css */
 .header {
-    padding: 1rem;
+  padding:0 1.2rem;
     background: #1976d2;      /* blu */
     color: #fff;
     text-align: center;
